welcome.lessons.welcome.instructions.Instructions.scala.code
avance()
baissebrosse()
avance()

droite()

avance()

avance()

droite()

avance()

avance()

droite()

avance()

avance()

droite()

avance()

droite()

avance()

gauche()